# langchain_learn

./: .gitignore  .uv.toml  1.md  README-test.md  main.py  pretty_print_agent_result.py  pyproject.toml  test.ipynb  test.md  项目依赖包结构分析.md  风险点.md
book-example/第三章/3.2.1/: notion_loader-demo.py  pdf_loader-demo.py
book-example/第三章/3.2.2/: document_structured_based_splitter-demo.py  length_based_splitter-demo.py  provider_specific_splitter-demo.py  text_structured_based_splitter-demo.py
book-example/第三章/3.2.3/: dashScope_embedding-demo.py
book-example/第三章/3.2.4/: retrieval-demo.py
book-example/第三章/3.3.3/: milvus-demo.py
book-example/第二章/2.1.2/: chatgpt-demo1.py  chatgpt-demo2.py
book-example/第二章/2.1.3/: deepseek-demo.py
book-example/第二章/2.1.4/: qwen-demo.py
book-example/第二章/2.1.5/: qwen-image-demo.py
book-example/第二章/2.2.3/: chat_prompt_template-demo.py
book-example/第二章/2.2.4/: system_human_ai_message-demo.py  tool_message-demo.py
book-example/第二章/2.3.1/: tool_basic-demo.py
book-example/第二章/2.3.2/: tool_basic-demo2.py  tool_basic-demo3.py
book-example/第二章/2.3.4/: tool_runtime-demo.py
book-example/第二章/2.4.2/: agent_basic-demo.py  react-demo.py
book-example/第二章/2.4.3/: structured_output-demo.py
book-example/第二章/2.4.4/: client_mcp-demo.py  (+2 more)
ch2/: s1.ipynb  s10_practice.ipynb  s1_create_llm.ipynb  s2.ipynb  s3.ipynb  s4.ipynb  s4_agent.ipynb  s5_mcp.ipynb  s5_mcp_servers_math.py  s5_mcp_servers_weather.py  s6_middleware_Summarization.ipynb  s7_middleware_HumanInTheLoop.ipynb  s8_middleware_decorator.ipynb  s9_middleware_AgentMiddleware.ipynb
ch2/practice/: app_streamlit.py  test_wechatbot.py
ch3/: s1_load.ipynb  s2_embedding.ipynb
ch4/: langgraph_demo.py  s1.ipynb  s10_stream_output.ipynb  s11_stream_output_costom.ipynb  s12_stream_output_token.ipynb  s13_subgraph_in_node.ipynb  s14_subgraph_as_node.ipynb  s3_memory_state.ipynb  s4_memory_store.ipynb  s5_memory_saver.ipynb  s6_interrupt.ipynb  s7_interrupt_review.ipynb  s8_interrupt_tool.ipynb  s9_interrupt_manual.ipynb
ch4/practice/: app_streamlit.py  config.py
ch5/: s1.ipynb  s2_StateBackend.ipynb  s3_FilesystemBackend.ipynb  s4_StoreBackend.ipynb  s5_CompositeBackend.ipynb  s6_SubAgent.ipynb  s7_CompiliedSubAgent.ipynb  s8_HumanInterrupt.ipynb  s9_SubAgentInterrupt.ipynb
(+90 files in other folders)
