[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.26.0",
    "dotenv>=0.9.9",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]
