[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.26.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-pdf>=0.2.0",
    "mcp>=1.28.1",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "wechatbot-sdk>=0.3.0",
]

[tool.ruff]
line-length = 120
exclude = [
    "build",
    "install",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
# ipynb专属忽略规则（按需）
per-file-ignores = { "*.ipynb" = ["T20", "E402"] }

[tool.ruff.format]
# 双引号字符串
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
